# DNEC

./: .env  .gitignore  Base.ipynb  Consolidado.py  Funciones.py  GEOLOCALIZACION DECIMAL PSA.xlsx  Informe_semanal_20241119.xlsx  Informe_semanal_20241120.xlsx  Informe_semanal_20241127.xlsx  Informe_semanal_20241210.xlsx  MisRetencionesImpositivas.xls  PSA_chequeo.ipynb  Parametros.py  Planilla.xlsx  Planilla_informe.xlsx  Planilla_modelo.xlsx  compilacion_operaciones.ipynb  complicacion_base_datos.ipynb  complicacion_procedimientos.ipynb  consolidado.ipynb  consolidado_semanal.ipynb  consolidado_semanal.py  consulta.py  contador 01_01_2025_AL_31_01_2025.xlsx  funciones.py  geo_nuevo.xlsx  main.py  merge.ipynb  pyproject.toml  requeriments.txt
bajadas/: NUEVA PLANILLA DE CARGA DE DATOS.xlsx  PLANILLA DE CARGA DE DATOS.xlsx  PLANILLA DE CARGA OPERACIONES.xlsm  PLANILLA DE CARGA OPERACIONES.xlsx  PLANILLA DE operaciones.xlsx  PLANILLA MODELO DE CARGA OPERACIONES (1).xlsx  bajada_arma (13).xls  bajada_arma (14).xls  bajada_arma.xls  bajada_divisas_secuestradas (15).xls  bajada_divisas_secuestradas (16).xls  bajada_divisas_secuestradas.xls  bajada_general.xls  bajada_general.xlsx  bajada_general_narcotrafico.xls  bajada_general_persona (18).xls  bajada_general_persona (19).xls  bajada_general_persona.xls  bajada_general_persona.xlsx  bajada_general_procedimiento.xls  bajada_general_procedimientos (43).xls  bajada_general_procedimientos.xls  bajada_ministerio_vehiculos (13).xls  bajada_ministerio_vehiculos.xls  bajada_objetos (18).xls  bajada_objetos (19).xls  bajada_trata.xls  (+7 more)
(+41 files in other folders)
