[tool.poetry]
name = "dnec"
version = "0.1.0"
description = "Sistema de procesamiento de datos DNEC"
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
pandas = "^2.0.0"
openpyxl = "^3.1.0"
xlrd = "^2.0.1"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"
ipykernel = "^6.29.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
testpaths = ["test"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
